--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!--======== Players Profile Section start ========-->
     <main class="full-width" id="players-profile-bg">
-        <div class="centerd-boxes" id="players-profile-wrap">
+        <section class="centerd-boxes" id="players-profile-wrap">
         <!--======== Here goes all the player's list ========-->
             <article class="individual-players">
                 <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
@@ -98,8 +98,64 @@
                 <h3>Cristiano Ronaldo</h3>
                 <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
             </article>
-            
+        </section>
     </main>
+
+<!--======== Footer Section start ========-->
+<main class="full-width" id="news-bg">
+    <section class="centerd-boxes" id="news-container">
+        <h2>Latest News</h2>
+        <div class="new-wrap">
+            <div class="individual-news">
+                <img src="img/news/news-1.jpg" alt="This is an image of Real Madrid players">
+                <h3>All clear after Real Madrid Returns to training</h3>
+                <p>Real Madrid players returned to training on Monday afternoon after having been given the whole weekend to rest by Zinedine Zidane.</p>
+                <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+
+            <div class="individual-news">
+                <img src="img/news/news-2.jpeg" alt="This is an image of Real Madrid players">
+                <h3>Gareth Bale Imitates Playing Golf During Real Madrid Training</h3>
+                <p>Real Madrid goalkeeper Thibaut Courtois posted an image on Instagram in which Gareth Bale is seen imitating himself, playing favourite sport, golf on the field.</p>
+                <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            
+            <div class="individual-news">
+                <img src="img/news/news-3.jpg" alt="This is an image of Real Madrid players">
+                <h3>Four Castilla players join Real Madrid training as injuries add up</h3>
+                <p>Compartir en Facebook Compartir en Twitter Compartir en Whatsapp Enviar por email SavingPrivate Militao Real Madrid will try to sign Mbappe,</p>
+                <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </div>
+    </section>
+</main>
+
+<!--======== Sponsore Section start ========-->
+<main class="full-width" id="sponsor-bg">
+    <section class="centerd-boxes" id="sponsor-container">
+        <h2>Our Sponsors</h2>
+        <div id="sponsor-wrap">
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/nike.png" alt="This is the logo of Nike.">
+            </div>
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/adidas.png" alt="This is the logo of Adidas.">
+            </div>
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/puma.png" alt="This is the logo of Nike.">
+            </div>
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/bwin.png" alt="This is the logo of Bwin.">
+            </div>
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/fly-emirates.png" alt="This is the logo of Fly Emirates.">
+            </div>
+            <div class="sopnsor-img-wrap">
+                <img src="img/sponsors/jeep.png" alt="This is the logo of Chevrolet.">
+            </div>
+        </div>
+    </section>
+</main>
 
 <!--======== Footer Section start ========-->
     <footer class="full-width" id="footer-bg">
