Mobile Responsive done

--- a/index.html
+++ b/index.html
@@ -36,96 +36,99 @@
 
 <!--======== Players Profile Section start ========-->
     <main class="full-width" id="players-profile-bg">
-        <section class="centerd-boxes" id="players-profile-wrap">
+        <section class="centerd-boxes" id="players-profile-container">
+            <h2>Our Players</h2>
         <!--======== Here goes all the player's list ========-->
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
-            <article class="individual-players">
-                <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-            </article>
+            <div id="players-profile-wrap">
+                <article class="individual-players">
+                    <img src="img/players/player-3.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-2.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Leonel Messi</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-1.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Neymar Jr</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-4.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Paulo Dybala</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-5.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Mesut Ozil</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-6.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Mauro Icardi</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-7.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Di Maria</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-8.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Kylian Mbappé</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-9.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Mohamed Salah</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-10.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Harry Kane</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-11.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Kevin De Bruyne</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+                <article class="individual-players">
+                    <img src="img/players/player-12.png" alt="This is an image of Cristiano Ronaldo.">
+                    <h3>Philippe Coutinho</h3>
+                    <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                </article>
+            </div>
         </section>
     </main>
 
-<!--======== Footer Section start ========-->
+<!--======== News Section start ========-->
 <main class="full-width" id="news-bg">
     <section class="centerd-boxes" id="news-container">
         <h2>Latest News</h2>
-        <div class="new-wrap">
-            <div class="individual-news">
+        <div class="news-wrap">
+            <article class="individual-news">
                 <img src="img/news/news-1.jpg" alt="This is an image of Real Madrid players">
                 <h3>All clear after Real Madrid Returns to training</h3>
                 <p>Real Madrid players returned to training on Monday afternoon after having been given the whole weekend to rest by Zinedine Zidane.</p>
                 <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
-            </div>
+            </article>
 
-            <div class="individual-news">
+            <article class="individual-news">
                 <img src="img/news/news-2.jpeg" alt="This is an image of Real Madrid players">
                 <h3>Gareth Bale Imitates Playing Golf During Real Madrid Training</h3>
                 <p>Real Madrid goalkeeper Thibaut Courtois posted an image on Instagram in which Gareth Bale is seen imitating himself, playing favourite sport, golf on the field.</p>
                 <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
-            </div>
+            </article>
             
-            <div class="individual-news">
+            <article class="individual-news">
                 <img src="img/news/news-3.jpg" alt="This is an image of Real Madrid players">
                 <h3>Four Castilla players join Real Madrid training as injuries add up</h3>
                 <p>Compartir en Facebook Compartir en Twitter Compartir en Whatsapp Enviar por email SavingPrivate Militao Real Madrid will try to sign Mbappe,</p>
                 <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
-            </div>
+            </article>
         </div>
     </section>
 </main>
