--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </article>
 
             <article class="individual-news">
-                <img src="img/news/news-2.jpeg" alt="This is an image of Real Madrid players">
+                <img src="img/news/news-2.jpg" alt="This is an image of Real Madrid players">
                 <h3>Gareth Bale Imitates Playing Golf During Real Madrid Training</h3>
                 <p>Real Madrid goalkeeper Thibaut Courtois posted an image on Instagram in which Gareth Bale is seen imitating himself, playing favourite sport, golf on the field.</p>
                 <a href="#">See More <i class="fas fa-angle-double-right"></i></a>
